# collective.coursetool

./: .gitignore  .meta.toml  .pre-commit-config.yaml  CHANGES.rst  MANIFEST.in  Makefile  README.rst  constraints.txt  mx.ini  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  sources.ini  tox.ini  webpack.config.js
.github/workflows/: test-matrix.yml  test.yml
resources/: bundle.js
resources/scss/: _theme.scss  coursetool.scss
src/collective/coursetool/: __init__.py  config.py  configure.zcml  interfaces.py  patches.py  permissions.py  permissions.zcml  setuphandlers.py  shop.py  testing.py  upgrades.py  upgrades.zcml  utils.py  vocabularies.py
src/collective/coursetool/browser/: configure.zcml  import.py  menu.py  registration.py  views.py  widgets.py
src/collective/coursetool/browser/overrides/: plone.app.layout.viewlets.membertools.pt
src/collective/coursetool/browser/static/: coursetool-bundle-remote.min.js  coursetool-bundle-remote.min.js.map  coursetool.css  coursetool.css.map  coursetool.min.css  coursetool.min.css.map  coursetool.min.js  coursetool.min.js.map
src/collective/coursetool/browser/templates/: coursetool_card.pt  import_members.pt  listing_certificates.pt  listing_courses.pt  listing_exams.pt  listing_locations.pt  listing_macros.pt  listing_members.pt  portal.pt  view_certificate.pt  view_course.pt  view_exam.pt  view_location.pt  view_member.pt  widget_course_occurrences_display.pt  widget_course_occurrences_object_display.pt
src/collective/coursetool/content/: __init__.py  certificate.py  configure.zcml  course.py  exam.py  location.py  member.py  user.py
src/collective/coursetool/locales/: collective.coursetool.pot  update.py  update.sh
src/collective/coursetool/profiles/default/: actions.xml  browserlayer.xml  catalog.xml  membrane_tool.xml  metadata.xml  (+4 more)
src/collective/coursetool/tests/: test_robot.py  test_setup.py
(+51 files in other folders)
