[metadata]
version = 1.0.0a1.dev0
name = collective.coursetool
description = Manage Courses, Lecturers, Students, Exams, Certificates
long_description = file: README.rst, CHANGES.rst
keywords = Plone, Course Management
author = Peter Mathis
author_email = peter.mathis@kombinat.at
maintainer = Kombinat Media Gestalter GmbH
maintainer_email = office@kombinat.at
url = https://github.com/kombinat/collective.coursetool.git
license = GPLv2
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Plone :: 6.0
    Framework :: Plone :: Addon
    Framework :: Zope :: 5
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
install_requires =
    setuptools
    z3c.jbot
    bda.plone.shop
    bda.plone.stripe
    dateparser
    collective.address
    collective.z3cform.datagridfield >= 3.0.0.dev0
    Products.membrane >= 6.0.0.dev0
    dexterity.membrane >= 3.0.0
    openpyxl
    reportlab

namespace_packages =
    collective

package_dir =
    = src
packages = find:
zip_safe = False

[options.entry_points]
z3c.autoinclude.plugin =
    target=plone

[options.extras_require]
test =
    plone.testing
    plone.app.robotframework

[options.packages.find]
where =
    src


[zest.releaser]
create-wheel = yes


[check-manifest]
ignore =
  *.cfg
  *.json
  *.yml
  .coveragerc
  .editorconfig
  .gitattributes

[flake8]
exclude = docs,*.egg.
max-complexity = 15

[isort]
# black compatible Plone isort rules:
profile = black
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
